More work on bundling Storage. Still not working